Changed http to https

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ http://www.templatemo.com/tm-513-avalon
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
     $(document).ready(function() 
 	{
