Rebranding and spotify iframe inclusion

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ http://www.templatemo.com/tm-513-avalon
                         <div class="text-content">
                             <!--<h6>There you go</h6>-->
                             <div class="line-dec"></div>
-                            <h1>Talking Time</h1>
-                            <h2>with Lukas and Alicia</h2>
+                            <h1>TALKING TIME</h1>
+                            <h2>with Lukas & Alicia</h2>
                             <div class="white-border-button">
                                 <a href="#" class="scroll-link" data-id="best-offer-section">Discover More</a>
                             </div>
@@ -45,13 +45,15 @@ http://www.templatemo.com/tm-513-avalon
                 </div>
                 <div class="col-md-4">
                     <div class="right-banner-content">
-                        <div class="logo"><a href="index.html"><img src="img/talkingtime.png" alt=""></a></div>
+                        <div class="logo"><a href="index.html"><img src="img/mic.png" alt=""></a></div>
                         <!--
                         <h2>Avalon</h2>
                         <span>Creative <em>HTML</em> Template</span>
                         -->
                         <div class="line-dec"></div>
-                        <p>“ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et sem blandit, rhoncus ante a, varius libero. Cras elementum tincidunt ullamcorper. Sed vehic ula dictum tortor ut aliquet. ”</p>
+                        <p>“Talking Time is a place where uncomfortable conversations about incarceration and everything to do with it take place.
+                            It is where the voice of those who have lived it, have loved ones that have or are living it, work in it or have an 
+                            interest in it, come together in a safe and supportive place.”</p>
                         <ul class="social-icons">
                             <li><a href="https://www.facebook.com/Talking-Time-with-Lukas-Alicia-105992888142880" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://twitter.com/time_lukas" target="_blank"><i class="fa fa-twitter"></i></a></li>
@@ -65,21 +67,23 @@ http://www.templatemo.com/tm-513-avalon
         </div>
     </section>
 
-    <!--
     <section class="best-offer" id=best-offer-section>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
                     <div class="best-offer-left-content">
+                        <!--
                         <div class="icon"><img src="img/best-offer-icon.png" alt=""></div>
                         <h4>Best Offer For You</h4>
+                        -->
                     </div>
                 </div>
                 <div class="col-md-8">
                     <div class="best-offer-right-content">
                         <div class="row">
-                            <div class="col-md-6 col-sm-12">
-                                <h2>Awesome &amp; Unique<br>Layout <em>Theme</em></h2>
+                            <div class="col-md-12 col-sm-12">
+                                <h2>Don't miss this week's podcast in <em>Spotify</em> now!</h2>
+                                <!---
                                 <p>Avalon is a full-width responsive web template. Please tell your friends about <a href="https://www.facebook.com/templatemo" target="_parent">templatemo</a>. Thank you. Feel free to use this template. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cura bitur et sem blandit, rhoncus ante, varius libero. Cras elemen tum tincidunt ullamcorper.</p>
                                 <ul>
                                     <li>+ Aenean eget ex faucibus, tempor nibh vel.</li>
@@ -87,20 +91,22 @@ http://www.templatemo.com/tm-513-avalon
                                     <li>+ Finibus ipsum et, imperdiet felis.</li>
                                     <li>+ Donec laoreet efficitur ultrices sit amet enim.</li>
                                 </ul>
+                                -->
                                 <div class="pink-button">
                                     <a href="#" class="scroll-link" data-id="events-section">Discover More</a>
                                 </div>
                             </div>
+                            <!--
                             <div class="col-md-6 col-sm-12">
-                                <img src="img/best-offer-image.png" alt="">
+                                <img src="img/barbed.png" alt="">
                             </div>
+                            -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
--->
 
     <section class="events" id="events-section">
         <div class="content-wrapper">
@@ -110,10 +116,12 @@ http://www.templatemo.com/tm-513-avalon
                         <div class="section-heading">
                             <div class="filter-categories">
                                 <ul class="project-filter">
+                                    <li class="filter" data-filter="design"><span>Spotify</span></li>
+                                    <!--
                                     <li class="filter" data-filter="all"><span>Show All</span></li>
-                                    <li class="filter" data-filter="design"><span>Design Meeting</span></li>
-                                    <li class="filter" data-filter="start"><span>App Start Up</span></li>
+                                    <li class="filter" data-filter="start"><span>Apple</span></li>
                                     <li class="filter" data-filter="web"><span>Web Conferences</span></li>
+                                    -->
                                 </ul>
                             </div>
                         </div>
@@ -122,129 +130,10 @@ http://www.templatemo.com/tm-513-avalon
                         <div class="projects-holder">
                             <div class="event-list">
                                 <ul>
-                                    <li class="project-item first-child mix web">
-                                        <ul class="event-item web">
-                                            <li>
-                                                <div class="date">
-                                                    <span>12<br>May</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <h4>four loko franzen</h4>
-                                                <div class="web">
-                                                    <span>Web Conferences</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="time">
-                                                    <span>8:00 AM - 11:00 AM<br>Saturday</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="white-button">
-                                                    <a href="#">I am interested</a>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="project-item second-child mix design">
+                                    <li class="project-item first-child mix design">
                                         <ul class="event-item design">
-                                            <li>
-                                                <div class="date">
-                                                    <span>24<br>April</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <h4>Drink vinegar coloring</h4>
-                                                <div class="design">
-                                                    <span>Design Meeting</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="time">
-                                                    <span>03:00 PM - 07:00 PM<br>Tuesday</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="white-button">
-                                                    <a href="#">I am interested</a>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="project-item third-child mix start design">
-                                        <ul class="event-item start">
-                                            <li>
-                                                <div class="date">
-                                                    <span>30<br>Mar</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <h4>core hammock stiller</h4>
-                                                <div class="app">
-                                                    <span>App Start Up, Design Meeting</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="time">
-                                                    <span>03:30 PM - 09:30 PM<br>Friday</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="white-button">
-                                                    <a href="#">I am interested</a>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="project-item fourth-child mix web">
-                                        <ul class="event-item web">
-                                            <li>
-                                                <div class="date">
-                                                    <span>22<br>Mar</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <h4>palo santo art party</h4>
-                                                <div class="web">
-                                                    <span>Web Conferences</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="time">
-                                                    <span>10:00 AM - 05:00 PM<br>Thursday</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="white-button">
-                                                    <a href="#">I am interested</a>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li class="project-item fivth-child mix start web">
-                                        <ul class="event-item start">
-                                            <li>
-                                                <div class="date">
-                                                    <span>16<br>Mar</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <h4>Paleo craft beer copper</h4>
-                                                <div class="app">
-                                                    <span>App Start Up, Web Conferences</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="time">
-                                                    <span>11:30 AM - 04:30 PM<br>Friday</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="white-button">
-                                                    <a href="#">I am interested</a>
-                                                </div>
-                                            </li>
+                                            <iframe src="https://open.spotify.com/embed/episode/1JFdwyvaCThhdal10OFqYY" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/2TDcmIvMeOburTMMJv0tkO" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                                         </ul>
                                     </li>
                                 </ul>
@@ -266,18 +155,22 @@ http://www.templatemo.com/tm-513-avalon
                 <div class="col-md-8">
                     <div id="owl-testimonial" class="owl-carousel owl-theme">
                         <div class="item col-md-12">
-                            <img src="img/author_01.png" alt="Steven Walker">
+                            <img src="img/lukas.png" alt="Lukas Carey">
                             <span>Speaker</span>
                             <h4>Lukas Carey</h4>
                             <br>
-                            <p><em>"</em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cura bitur et sem blandit, rhoncus ante, varius libero. Cras elemen tum tincidunt ullamcorper sed vehic ula dictum.<em>"</em></p>
+                            <p><em>"</em>
+                                As a long time educator, trainer and academic, i have extensive experience in helping others achieve their own life and educational goals. With a strong appreciation and passion for education i continue to study and perform research in a wide variety of areas. I work enthusiastically in the training field, helping long term and underprivileged persons develop their own personal and professional skills to gain meaningful work and educational opportunities. 
+                                <em>"</em></p>
                         </div>
                         <div class="item col-md-12">
-                            <img src="img/author_02.png" alt="Johnny Smith">
+                            <img src="img/alicia.png" alt="Alicia Hebb">
                             <span>Speaker</span>
-                            <h4>Alicia</h4>
+                            <h4>Alicia Hebb</h4>
                             <br>
-                            <p><em>"</em>Morbi elit est, pharetra ac enim a, faucibus dignissim augue. Quisque erat erat, placerat non pulvinar eget, sodales eget ex. Cras pulvinar purus et rutrum faucibus.<em>"</em></p>
+                            <p><em>"</em>
+                                Teacher / LLN Trainer for at-risk youth • Community & Stakeholder Engagement • Artist • Co-host Talking Time with Lukas & Alicia: Criminology • Incarceration • Employability Skills • Education                                
+                                <em>"</em></p>
                         </div>
                     </div>
                 </div>
