--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@ http://www.templatemo.com/tm-513-avalon
                         <span>Creative <em>HTML</em> Template</span>
                         -->
                         <div class="line-dec"></div>
+                        <!--
                         <p>“Talking Time is a place where uncomfortable conversations about incarceration and everything to do with it take place.
                             It is where the voice of those who have lived it, have loved ones that have or are living it, work in it or have an 
                             interest in it, come together in a safe and supportive place.”</p>
+                        -->
                         <ul class="social-icons">
                             <li><a href="https://www.facebook.com/Talking-Time-with-Lukas-Alicia-105992888142880" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://twitter.com/time_lukas" target="_blank"><i class="fa fa-twitter"></i></a></li>
@@ -83,8 +85,13 @@ http://www.templatemo.com/tm-513-avalon
                         <div class="row">
                             <div class="col-md-12 col-sm-12">
                                 <h2>Don't miss this week's podcast in <em>Spotify</em> now!</h2>
-                                <!---
+
+                                <p>Talking Time is a place where uncomfortable conversations about incarceration and everything to do with it take place.
+                            It is where the voice of those who have lived it, have loved ones that have or are living it, work in it or have an 
+                            interest in it, come together in a safe and supportive place.</p>
+                                                              <!---
                                 <p>Avalon is a full-width responsive web template. Please tell your friends about <a href="https://www.facebook.com/templatemo" target="_parent">templatemo</a>. Thank you. Feel free to use this template. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cura bitur et sem blandit, rhoncus ante, varius libero. Cras elemen tum tincidunt ullamcorper.</p>
+                              
                                 <ul>
                                     <li>+ Aenean eget ex faucibus, tempor nibh vel.</li>
                                     <li>+ Bibendum tortor. Suspendisse a diam viverra.</li>
@@ -108,41 +115,71 @@ http://www.templatemo.com/tm-513-avalon
         </div>
     </section>
 
-    <section class="events" id="events-section">
-        <div class="content-wrapper">
-            <div class="inner-container container-fluid">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                        <div class="section-heading">
-                            <div class="filter-categories">
-                                <ul class="project-filter">
-                                    <li class="filter" data-filter="design"><span>Spotify</span></li>
-                                    <!--
-                                    <li class="filter" data-filter="all"><span>Show All</span></li>
-                                    <li class="filter" data-filter="start"><span>Apple</span></li>
-                                    <li class="filter" data-filter="web"><span>Web Conferences</span></li>
-                                    -->
-                                </ul>
+    <section class="services" id="services-section">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper first-service">
+                            <div class="front">
+                                <div class="icon">
+                                    <img src="img/heart-icon.png" alt="">
+                                </div>
+                                <h4>Justice</h4>
+                            </div>
+                            <div class="back">
+                                <p>Donec malesuada eu est in mattis. Aenean velit eros, blandit et tortor non, viverra hendrerit velit. Maecenas ut orci nec velit convallis lobortis sit amet ut magna. Ut rhoncus suscipit arcu, sed facilisis risus.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-10 col-sm-12 col-md-offset-1">
-                        <div class="projects-holder">
-                            <div class="event-list">
-                                <ul>
-                                    <li class="project-item first-child mix design">
-                                        <ul class="event-item design">
-                                            <iframe src="https://open.spotify.com/embed/episode/1JFdwyvaCThhdal10OFqYY" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                                            <iframe src="https://open.spotify.com/embed/episode/2TDcmIvMeOburTMMJv0tkO" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                                        </ul>
-                                    </li>
-                                </ul>
+                </div>
+                <div class="col-md-3">
+                    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper second-service">
+                            <div class="front">
+                                <div class="icon">
+                                    <img src="img/heart-icon.png" alt="">
+                                </div>
+                                <h4>Justice</h4>
+                            </div>
+                            <div class="back">
+                                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas vel diam porttitor, fermentum ante et, ornare elit. Morbi nec diam ex. Pellentesque habitant morbi tristique senectus.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper third-service">
+                            <div class="front">
+                                <div class="icon">
+                                    <img src="img/heart-icon.png" alt="">
+                                </div>
+                                <h4>Justice</h4>
+                            </div>
+                            <div class="back">
+                                <p>Mauris congue ex eu enim suscipit, in suscipit est efficitur. Donec quis orci malesuada nunc lobortis aliquet et ut lacus. Sed erat magna, fringilla ac imperdiet in, pulvinar quis ante. Maecenas eleifend, sem vitae tristique.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                        <div class="flipper fourth-service">
+                            <div class="front">
+                                <div class="icon">
+                                    <img src="img/heart-icon.png" alt="">
+                                </div>
+                                <h4>Justice</h4>
+                            </div>
+                            <div class="back">
+                                <p>Donec venenatis erat at leo dictum, at dictum eros volutpat. Phasellus in dui sed purus varius hendrerit. Duis ac enim ac orci efficitur condimentum vel eget purus. Sed vel massa nulla. Curabitur consequat sem ac velit sollicitudin ornare.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
     </section>
 
 
@@ -177,72 +214,62 @@ http://www.templatemo.com/tm-513-avalon
             </div>
         </div>
     </section>      
-    
-    <section class="services" id="services-section">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-                        <div class="flipper first-service">
-                            <div class="front">
-                                <div class="icon">
-                                    <img src="img/heart-icon.png" alt="">
-                                </div>
-                                <h4>Aliquam finibus est</h4>
+
+
+    <section class="events" id="events-section">
+        <div class="content-wrapper">
+            <div class="inner-container container-fluid">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="section-heading">
+                            <h1>Spotify</h1>
+                            <br>
+                            <!--
+                            <div class="filter-categories">
+                                <ul class="project-filter">
+                                    <li class="filter" data-filter="design"><span>Spotify</span></li>
+                                    <li class="filter" data-filter="all"><span>Show All</span></li>
+                                    <li class="filter" data-filter="start"><span>Apple</span></li>
+                                    <li class="filter" data-filter="web"><span>Web Conferences</span></li>
+                                </ul>
                             </div>
-                            <div class="back">
-                                <p>Donec malesuada eu est in mattis. Aenean velit eros, blandit et tortor non, viverra hendrerit velit. Maecenas ut orci nec velit convallis lobortis sit amet ut magna. Ut rhoncus suscipit arcu, sed facilisis risus.</p>
-                            </div>
+                            -->
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-                        <div class="flipper second-service">
-                            <div class="front">
-                                <div class="icon">
-                                    <img src="img/home-icon.png" alt="">
-                                </div>
-                                <h4>Nullam sed turpis</h4>
-                            </div>
-                            <div class="back">
-                                <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas vel diam porttitor, fermentum ante et, ornare elit. Morbi nec diam ex. Pellentesque habitant morbi tristique senectus.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-                        <div class="flipper third-service">
-                            <div class="front">
-                                <div class="icon">
-                                    <img src="img/revision-icon.png" alt="">
-                                </div>
-                                <h4>Sed in luctus</h4>
-                            </div>
-                            <div class="back">
-                                <p>Mauris congue ex eu enim suscipit, in suscipit est efficitur. Donec quis orci malesuada nunc lobortis aliquet et ut lacus. Sed erat magna, fringilla ac imperdiet in, pulvinar quis ante. Maecenas eleifend, sem vitae tristique.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-                        <div class="flipper fourth-service">
-                            <div class="front">
-                                <div class="icon">
-                                    <img src="img/chat-icon.png" alt="">
-                                </div>
-                                <h4>Fusce congue ipsum</h4>
-                            </div>
-                            <div class="back">
-                                <p>Donec venenatis erat at leo dictum, at dictum eros volutpat. Phasellus in dui sed purus varius hendrerit. Duis ac enim ac orci efficitur condimentum vel eget purus. Sed vel massa nulla. Curabitur consequat sem ac velit sollicitudin ornare.</p>
+                    <div class="col-md-10 col-sm-12 col-md-offset-1">
+                        <div class="projects-holder">
+                            <div class="event-list">
+                                <ul>
+                                    <li class="project-item first-child mix design">
+                                        <ul class="event-item design">
+                                            <iframe src="https://open.spotify.com/embed/episode/0OQnGlAQBMJPNpFu10swPp" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/1JFdwyvaCThhdal10OFqYY" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/2TDcmIvMeOburTMMJv0tkO" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/346ALFkWzRZpfKxBeToRE6" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/3POvGOKENntC1kdOYZnW9L" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/1oeunm0Dy7zylOmk9RRpjp" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/7aAEVEIJBCvfa6Ep7Iubmr" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/14vE4IWTL972gtXFhwgA78" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/0vJChaISbH3hyBbqOpSATb" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/1UlVe9lWNKs4zGKDKyQe73" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/7b0ndoQXa2IVriZKoqKMR5" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/1nNMDu8fugJ1r612IbA4kL" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/3ZM7MyPz9cfPdxGnls5uxr" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/2R1Y2GAhEuGHeIhafwWoQ7" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/5lS23E8pq0QhNdRu01vJd4" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/7BSfhEL2QKiTGgkqICyO3W" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/6YckQJQwIhp2It46Fq8zYn" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/3DXJQJbJmVn8PwcjBvfCkM" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                            <iframe src="https://open.spotify.com/embed/episode/7Cdxk0zogdi1lpNe4q7LyO" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                                        </ul>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
     </section>
 
     <section class="contact-us" id="contact-section"> 
@@ -281,8 +308,16 @@ http://www.templatemo.com/tm-513-avalon
                 </div>
                 <div class="col-md-4">
                     <div class="contact-right-content">
+                        <!--
                         <div class="icon"><img src="img/map-marker-icon.png" alt=""></div>
                         <h4>You can find us on maps</h4>
+                        -->
+                        <h5>Email: talkingtimeradio@gmail.com</h5>
+                        <h5>Twitter: @time_lukas</h5>
+                        <h5>Facebook/Messenger: Talking Time with Lukas and Alicia</h5>
+                        <h5>LinkedIn: Lukas Carey / Alicia Hebb</h5>
+
+
                     </div>
                 </div>
             </div>
